--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,88 +1,132 @@
 <div class="articles-container">
   
-	<div class="masonry js-masonry"  data-masonry-options='{ "isFitWidth": true }'>
-	
-	  <div class="itemz ease">
-	   		<div class="img-box">
-	   			<img src="/assets/airplanes.jpg">
-	   		</div>
-	   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
+  <div class="article-list">
+		<div class="articles_filter">
+			<h3 class="show-all headline ease" data-filter="*">Show all</h3><br><br>
 		
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
+			<div class="article-link-list">
+				<div class="ready">
+					<h3 class="headline ease" data-filter=".ready">Ready</h3>
+					<!-- <li class="text-left">
+						ready 1
+					</li>
+					<li class="text-left">
+						ready 2
+					</li>
+					<li class="text-left">
+						ready 3
+					</li>
+					<li class="text-left">
+						ready 4
+					</li> -->	
+				</div>
+				<div class="set">
+					<h3 class="headline ease" data-filter=".set">Set</h3>
+					<!-- <li class="text-left">
+						set 1
+					</li>
+					<li class="text-left">
+						set 2
+					</li> -->
+				</div>
+				<div class="go">
+					<h3 class="headline ease" data-filter=".go">Go</h3>
+					<!-- <li class="text-left">
+						go 1
+					</li>
+					<li class="text-left">
+						go 2
+					</li> -->
+				</div>
+			</div>
 
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-box">
-	   		<img src="/assets/airplanes.jpg">
-	 		</div>
-  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
-	  </div>
-
+		</div>
 		
-		<div class="itemz ease">
-	   		three point one
-	  </div>
-		
-		<div class="itemz ease">
-	   		four
-	  </div>
-
-		<div class="itemz ease">
-			<div class="img-div">
-	   		five
-	   	</div>
-	  </div>
-		
-		<div class="itemz ease">
-	   		five
-	  </div>
-		
-		<div class="itemz ease">
-	   		five
-	  </div>
-
-<!-- 	  <div class="item w2">two</div>
-	  <div class="item 3-div">three</div>
- -->
 	</div>
+
+ 	<div class="article-tiles">
+		<div class="masonry isotope js-isotope js-masonry" data-masonry-options='{ "itemSelector": ".itemz", "masonry": { "columnWidth": 300, "gutter": 5 } }'>
+		
+		  <div class="itemz ready ease">
+		   		<div class="img-box">
+		   			<img src="/assets/airplanes.jpg">
+		   		</div>
+		   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+			
+			<div class="itemz ready ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz set ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz set ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz set ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz do ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz go ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			<div class="itemz go ease">
+				<div class="img-box">
+		   		<img src="/assets/airplanes.jpg">
+		 		</div>
+	  		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
+		  </div>
+
+			
+			<div class="itemz ready ease">
+		   		three point one
+		  </div>
+			
+			<div class="itemz ready ease">
+		   		four
+		  </div>
+
+			<div class="itemz set ease">
+				<div class="img-div">
+		   		five
+		   	</div>
+		  </div>
+			
+			<div class="itemz set ease">
+		   		five
+		  </div>
+			
+			<div class="itemz go ease">
+		   		five
+		  </div>
+
+		</div>
+	</div>
+
 </div>
