--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="owl-demo" class="owl-carousel owl-theme cursor">
 	  <div class="item">
 	  	<div class="image-wrapper">
-	  		<div class="image-content">
+	  		<div class="image-content first-slide">
   				<p>Last week, 10,612 people used TripPlanner to price around the world tickets or multi destination flights</p>
 			  	<p>Now it’s your turn</p> 
 			  	<p>Get instant pricing for any round the world trip right now</p>
@@ -15,7 +15,7 @@
 
 	  <div class="item">
 	  	<div class="image-wrapper">
-	  		<div class="image-content">
+	  		<div class="image-content second-slide">
   				<p>Find out why AirTreks is the best Around the World ticket provider anywhere.</p>
   				<p>Why AirTreks?</p> 
   				<p>For almost 30 years we have been helping people realize their dreams of around the world travel.</p><br>
@@ -27,9 +27,9 @@
 
 	  <div class="item">
 	  	<div class="image-wrapper">
-	  		<div class="image-content">
+	  		<div class="image-content third-slide">
 		  		<p>Learn how to travel around the world.</p>
-		  		<p class="image-content-sub">We've crafted more than 50 articles with all our best advice for anyone making the leap to long-term, around-the-world travel.</p><br>
+		  		<p class="image-content-sub">We've crafted more than 50 articles containing our best advice for anyone making the leap to long-term, around-the-world travel.</p><br>
 			  	<button type="button" class="btn btn-primary btn-lg" id="tortw">Check out RTW 101</button>
 		  	</div>
 		  </div>
@@ -81,8 +81,21 @@
 			<!-- // CONTENT NAV // -->
 			<div class="rtw101-nav">
 				
-				<h2 class="nav-title">Why AirTreks</h2>
-				<h5></h5>
+				<h3 class="nav-title">How to Plan a RTW Trip</h3>
+				<div class="rtwnav-text">
+					<p>What's the process of planning and buying around the world tickets?</p>
+
+					<p>How do you know when to pull the trigger?</p>
+
+					<p>What makes a good travel budget?</p>
+
+					<p>How do you decide where to go?</p>
+
+					<p>How on earth do you save the money to do this?</p>
+
+					<p>Find out the answers to all these planning questions and more with our	 <a href="/articles">RTW 101.</a></p>
+				</div>
+
 				<!-- <div class="world-by-airtreks"> -->
 					<!-- doc to help add the script for aweber form --> 
 					<!-- https://help.aweber.com/entries/48887918-How-Do-I-Add-A-Form-To-My-WordPress-Page- -->
@@ -90,14 +103,8 @@
 						<fieldset>
 
 						<h4>Or sign up for "The World By AirTreks"</h4>
-						<p>A 30-day email course to teach you:</p>
-							<ul>
-								<li>How Avoid the Most Common RTW Mistakes</li> 
-								<li>How Frequent Flier Miles Work On RTW Trips</li> 
-								<li>When Flying Can Ruin Your Trip</li> 
-								<li>14 Ways To Save Money On Your Trip</li>
-								<li>...and more</li>
-							</ul>
+						<p>A 30-day email program that brings to your inbox money saving tips, insider planning advice as well as a special gift once you finish!</p>
+							
 						<div class="control-group">
 						  <label class="control-label" for="First Name">First Name</label>
 						  <div class="controls">
