--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,39 +5,32 @@
 			<h3 class="show-all headline ease" data-filter="*">Show all</h3><br><br>
 		
 			<div class="article-link-list">
-				<div class="ready">
+				<div class="ready parent">
 					<h3 class="headline ease" data-filter=".ready">Ready</h3>
-					<!-- <li class="text-left">
-						ready 1
-					</li>
-					<li class="text-left">
-						ready 2
-					</li>
-					<li class="text-left">
-						ready 3
-					</li>
-					<li class="text-left">
-						ready 4
-					</li> -->	
+						<div class="ready-desc hiddenitems">
+							<h5>The around the world trip planning process.</h5>
+							<p>This is where AirTreks is at our best. Experience, advice and insight into what will give you the best around the world trip possible. This section covers the planning phase from the glimmer of the travel idea to the part where you actually buy your tickets.</p>
+						</div>
+				
 				</div>
-				<div class="set">
+
+				<div class="set parent">
 					<h3 class="headline ease" data-filter=".set">Set</h3>
-					<!-- <li class="text-left">
-						set 1
-					</li>
-					<li class="text-left">
-						set 2
-					</li> -->
+						<div class="set-desc hiddenitems">
+							<h5>AKA: "Taking The Plunge"</h5>
+							<p>Time to buy your tickets. There’s still a lot to know at this stage so check out the articles for AirTreks’ tips on things relating to the period from the big buy till your day of departure.</p>
+						</div>
 				</div>
-				<div class="go">
+
+				<div class="go parent">
 					<h3 class="headline ease" data-filter=".go">Go</h3>
-					<!-- <li class="text-left">
-						go 1
-					</li>
-					<li class="text-left">
-						go 2
-					</li> -->
+						<div class="go-desc hiddenitems">
+							<h5>Let’s do this!</h5>
+							<p>You’re officially “Off to the Airport”. Insight on how to make the best decisions while you’re out on the road.</p>
+						</div>
+				
 				</div>
+
 			</div>
 
 		</div>
