--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -1,7 +1,7 @@
 @media (min-width: 720px) and (max-width: 900px) {
 	
 	.image-content {
-		font-size: ;
+		font-size: 20px;
 	}	
 
 
@@ -11,6 +11,17 @@
 	}
 }
 
-@media (max-width: 360px) {
+@media (max-width: 750px) {
+
+	.phone, .biz {
+		width: 95%;
+	}
+
+	.phone {
+		margin-right: 45px;
+	}
+	.biz {
+		margin-left: 50px;
+	}
 
 }
