--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">   	    
+	      <ul class="nav navbar-nav navbar-right">   	    
 	          
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Travel Store <span class="caret"></span></a>
@@ -54,20 +54,28 @@
 	            <li><a href="#">Travel Services</a></li>
 	           </ul>
 	        </li>
-	        
 	        <li><a href="#">Blog</a></li>
 	        <li><a href="#">About AirTreks</a></li>
 	      </ul>
-	     
-	       <form class="navbar-form navbar-right" role="search">
-	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Search">
-	        </div>
-	        <button type="submit" class="btn btn-default">Submit</button>
-	      </form>
+
 	    </div> 
 	  </div> 
 	</nav>
+
+
+  <div id="flash">
+ 	  <p class="notice"><%= notice %></p>
+ 		<p class="alert"><%= alert %></p>
+	</div>
+
+	<script type="text/javascript">
+		$(document).ready(function(){
+	  	setTimeout(function(){
+	    	$('#flash').remove();
+	  	}, 5000);
+	 	})
+	</script>
+
 
 	<%= yield %>
 </div> <!-- background-wrapper -->
@@ -81,7 +89,6 @@
 			<div class="row">
 			  <div class="col-md-4">
 			  	<ul class="list-unstyled list-group text-left">
-			  		<li><h5>THE DEETS</h5>
 			  		<li class="footer-item"><a href="#">Contact AirTreks</a></li>
 			  		<li class="footer-item"><a href="#">About AirTreks</a></li>
 			  		<li class="footer-item"><a href="#">Your Privacy</a></li>
@@ -93,7 +100,7 @@
 			  </div>
 			  <div class="col-md-4">
 					<ul class="list-unstyled list-group text-left">
-			  		<li class="text-left"><h5>RTW 101</h5></li>
+			  		<li class="text-left footer-item"><a href="#">RTW 101</a></li>
 			  		<li class="text-left footer-item"><a href="#">Travel Store</a></li>
 			  		<li class="text-left footer-item"><a href="#">Blog</a></li>
 			  		<li class="text-left footer-item"><a href="#">Testimonials</a></li>
@@ -101,12 +108,34 @@
 			  </div>
 			  <div class="col-md-4">
 			  	<ul class="list-unstyled list-group text-left social">
-			  		<li><h5>SOCIALIZE WITH US</h5></li><br>
 			  		<li class="footer-item"><a href="http://www.facebook.com/airtreksrtw"><i class="fa fa-facebook-square fa-2x"></i></a></li>
 			  		<li class="footer-item"><a href="http://www.twitter.com/airtreks"><i class="fa fa-twitter-square fa-2x"></i> </a></li>
 			  		<li class="footer-item"><a href="https://plus.google.com/u/0/103614896315177653372/posts"><i class="fa fa-google-plus-square fa-2x"></i> </a></li>
 			  		<li class="footer-item"><a href="http://www.pinterest.com/airtreks/"><i class="fa fa-pinterest-square fa-2x"></i> </a></li>
-			  	</ul>
+			  	</ul><br>
+			  	<div class="row searchbar">
+					  <div class="col-lg-10">
+					    <div class="input-group">
+					      <input type="text" class="form-control" placeholder="Search AirTreks">
+					      <span class="input-group-btn">
+					        <button class="btn btn-default" type="button">Go!</button>
+					      </span>
+					    </div><!-- /input-group -->
+					  </div><!-- /.col-lg-6 -->
+					</div><!-- /.row -->
+					<br>
+					<!-- DEVISE LOGIN -->
+		      <div class="devise">
+		      	<span>TripPlanner Users: &nbsp;</span>
+			      <% if user_signed_in? %>
+						  Logged in as <strong><%= current_user.username %></strong>.
+						  <%= link_to 'Edit profile', edit_user_registration_path %> |
+						  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+						<% else %>
+						  <%= link_to "Sign up", new_user_registration_path %> |
+						  <%= link_to "Login", new_user_session_path %>
+						<% end %>
+					</div>
 			  	<p style="font-size:17px" class="text-left">&copy; 2014 AirTreks, Inc</p>
 			  </div>
 			</div>
