--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -102,7 +102,7 @@
 					<form class="form-horizontal">
 						<fieldset>
 
-						<h4>Or sign up for "The World By AirTreks"</h4>
+						<h4>Register for <em>The World by AirTreks</em></h4>
 						<p>A 30-day email program that brings to your inbox money saving tips, insider planning advice as well as a special gift once you finish!</p>
 							
 						<div class="control-group">
@@ -125,7 +125,7 @@
 						    <input id="textinput" name="textinput" type="text" placeholder="worldtraveler@gmail.com" class="input-xlarge" required="">
 						  </div>
 						</div>
-
+						<button type="button" class="btn btn-primary btn-xs" style="margin-top:5px">Make it so!</button>
 						</fieldset>
 					</form>
 				<!-- </div>	 -->
