bg image in 2 divs, articles nav

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,9 @@
 <div class="articles-container">
   
   <div class="article-list">
+  	<div class="rtw101-articles">RTW 101</div> <!-- nav banner -->
 		<div class="articles_filter">
-			<h3 class="show-all headline ease" data-filter="*">Show all</h3><br><br>
+			<h3 class="show-all headline ease" data-filter="*">Show all</h3><br>
 		
 			<div class="article-link-list">
 				<div class="ready parent">
