--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -38,7 +38,7 @@
 	</div>
 
 	<!-- //////// PHONE & BIZ CLASS ///////// -->
-	<div class="phone-and-biz row">
+	<div class="phone-and-biz row panel first"> <!-- panel first are for fixed div background -->
 		<a name="phonebizanchor" id="phonebizanchor"></a>
 
 		<div class="col-md-6">
@@ -137,6 +137,10 @@
 	</div> 
 
 	<!-- //////// SPECIALS //////// -->
+	<div class="specials-lede">
+		<h3>Don't know where to go?</h3>
+		<h4>Start with our specials - put together for maximum value!</h4>
+	</div>
 	<div class="specials_thumbs_container">
 
 		<div id="owl-2" class="owl-carousel owl-theme cursor">
@@ -240,7 +244,7 @@
 
 	<!-- ////// TESTIMONIALS /////// -->
 
-	<div class="testimonials-container">
+	<div class="testimonials-container panel1 second">
 		<h2>What people are saying about us:</h2>
 
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -248,8 +252,7 @@
 		  <div class="carousel-inner">
 		    <div class="item active">
 		      <p>Nicole (January 15, 2014)
-					<p>"Thank you so much! I appreciate the fast and friendly help at a low price. I have been recommending Airtreks to all of my friends, family and people I am meeting all over the world!</p>
-					<p>"Thanks for helping my adventure around the world"</p>
+					<p>"Thank you so much! I appreciate the fast friendly help at a low price. I've been recommending Airtreks to all of my friends, family &apm; the people I'm meeting all over the world!</p>
 		    </div>
 		    <div class="item">
 		      <p>Tom C. (September 3, 2013)</p>
