--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,13 @@
  *= require_tree .
  */
 
-html, body, li {
+html, body {
+	width: 100%;
+	height: 100%;
 	margin: 0;
+}
+
+html, body, li {
 	list-style: none; 
 	font-family: 'Titillium Web', sans-serif;
 }
@@ -184,16 +189,25 @@ img.nav-logo {
 /*////// PHONE & BIZ SECTION /////// */
 
 .phone-and-biz {
-	margin: 0 auto 20px;
+	margin: 0 auto;
 	width: 100%;
-	min-height: 185px;
 	clear: both;
-	background-color: #f0f0f0;
 	font-size: 18px;
 }
 
 .row {
 	margin: -21px 0 0 0 !important;
+}
+
+.panel {
+	width: 100%;
+	height: 475px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.panel.first {
+	background-image: url('../assets/sydney.jpg');
 }
 
 .phone, .biz {
@@ -223,9 +237,9 @@ img.nav-logo {
 	display: block;
 	background-color: #fff;
 	border-radius: 50px;
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.5);
-	box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.5);
+	-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.8);
+  -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.8);
+	box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.8);
 }
 
 .phoneicon {
@@ -236,7 +250,6 @@ img.nav-logo {
 	width: 80px;
 	padding: 15px 0px 10px 10px;
 }
-
 
 .phone p:nth-child(2), .biz p:nth-child(2) {
 	font-size: 26px;
@@ -303,21 +316,25 @@ img.nav-logo {
 	text-align: center;
 }
 
-.rtw101-splash { 
-	position: relative; /*for the animate down feature*/
+.rtw101-splash, .rtw101-articles { 
 	background-color: #000;
 	opacity: 0.8;
 	color: #ccc;
-	margin-left: -2px;
 	width: 100%;
 	font-family: 'Ewert', cursive;
-	font-size: 80px;
 	-webkit-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 	-moz-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 	-o-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 	-ms-transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 	transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 }
+
+.rtw101-splash {
+	position: relative; /*for the animate down feature*/
+	font-size: 80px;
+	margin-left: -2px;
+}
+
 
 .rtw101-splash-sub {
 	color: #fff;
@@ -350,6 +367,18 @@ img.nav-logo {
 .specials_thumbs_container {
 	width: 100%;
 	padding: 0 30px 5px 30px;
+	background-color: rgba(0,0,0,0.3);
+}
+
+.specials-lede {
+	width: 100%;
+	padding: 1px 0 5px 0;
+	text-align: center;
+	background-color: rgba(0,0,0,0.3);
+	color: #fff;
+}
+.specials-lede h3 {
+	text-transform: uppercase;
 }
 
 .thumbnail .caption {
@@ -431,24 +460,37 @@ img.nav-logo {
 /* ///// TESTIMONIALS //// */
 
 .testimonials-container {
-	background-color: lightgray;
-	height: 48vh;
+	background-color: #E0E0E0;
+	height: 38vh;
 	width: 100%;
 	padding: 10px 0;
+	color: #fff;
 }
 
 .carousel-inner {
 	font-size: 18px;
 	position: relative !important;
 	width: 50% !important;
+	height: 150px !important;
 	overflow: hidden;
 	margin: 15px auto !important;
-	height: 150px !important; 
-	/*padding: 0 25px 25px 25px !important;*/
+	background-color: rgba(0,0,0,0.9); 
+	/*padding: 10px !important;*/
 }
 
 .carousel-indicators {
-	bottom: -35px !important;
+	bottom: 5px !important;
+}
+
+.panel1 {
+	width: 100%;
+	height: 320px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.panel1.second {
+	background-image: url('../assets/paris.jpg');
 }
 
 	/*//////// FOOTER ////////*/
@@ -502,6 +544,7 @@ img.nav-logo {
 
 .articles-container {
 	width: 100%;
+	height: 100%;
   margin: auto;
 	background-color: rgba(0,0,0,0.7);
 }
@@ -517,6 +560,15 @@ img.nav-logo {
 	float: left;
 	background-color: #fff;
 	overflow: scroll;
+}
+
+.rtw101-articles {
+	font-size: 45px;
+	margin: 20px 0px 0px -2px;
+}
+
+.articles_filter {
+	margin-top: 50px;
 }
 
 .headline {
@@ -540,13 +592,15 @@ img.nav-logo {
 	padding: 10px;
 }
 
-
+.hiddenitems h5 {
+	color: darkred;
+}
 
 
 
 .article-tiles {
 	width: 75%;
-	height: 100%;
+	height: 100% !important;
 	float: left;
 	background-color: #fff;
 	display: block;
